package(default_visibility = ["//visibility:public"])

cc_library(
    name = "co",
    srcs = [
        "coroutine.cc",
  ],
    hdrs = [
        "bitset.h",
        "coroutine.h",
    ],
    copts = [
        "-Wall",
    ],
    deps = [
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)

cc_binary(
    name = "cotest",
    srcs = ["cotest.cc"],
    deps = [
        ":co",
    ],
)

cc_binary(
    name = "costress",
    srcs = ["costress.cc"],
    deps = [
        ":co",
    ],
)

cc_test(
    name = "test_coroutines",
    srcs = [
        "test_coroutines.cc",
    ],
    deps = [
        ":co",
        "@com_google_googletest//:gtest_main",
    ],
)
