package(default_visibility = ["//visibility:public"])

config_setting(
  name = "macos_arm64",
  values = {"cpu": "darwin_arm64"},
)

config_setting(
  name = "macos_default",
  values = {"cpu": "darwin"},
)

config_setting(
  name = "macos_x86_64",
  values = {"cpu": "darwin_x86_64"},
)


cc_library(
    name = "co",
    srcs = [
        "coroutine.cc",
    ],
    hdrs = [
        "bitset.h",
        "coroutine.h",
    ],
    copts = [
        "-Wall",
    ],
    deps = select({
        "//:macos_x86_64": [],
        "//:macos_arm64": [],
        "//:macos_default": [],
        "//conditions:default": ["@com_google_absl//absl/container:flat_hash_map"],
    }),
)

cc_binary(
    name = "cotest",
    srcs = ["cotest.cc"],
    deps = [
        ":co",
    ],
)

cc_binary(
    name = "costress",
    srcs = ["costress.cc"],
    deps = [
        ":co",
    ],
)

cc_test(
    name = "test_coroutines",
    srcs = [
        "test_coroutines.cc",
    ],
    deps = [
        ":co",
        "@com_google_googletest//:gtest_main",
    ],
)
