package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary", "cc_test")

config_setting(
    name = "macos_arm64",
    values = {"cpu": "darwin_arm64"},
)

config_setting(
    name = "macos_default",
    values = {"cpu": "darwin"},
)

config_setting(
    name = "macos_x86_64",
    values = {"cpu": "darwin_x86_64"},
)

cc_library(
    name = "co",
    srcs = [
        "context.S",
        "coroutine.cc",
    ],
    hdrs = [
        "bitset.h",
        "context.h",
        "coroutine.h",
        "detect_sanitizers.h",
    ],
    copts = [
        "-Wall",
    ],
    deps = select({
        "//:macos_x86_64": [],
        "//:macos_arm64": [],
        "//:macos_default": [],
        "//conditions:default": ["@abseil-cpp//absl/container:flat_hash_map"],
    }) + [
        "@abseil-cpp//absl/container:flat_hash_set",
    ],
)

# C++20-only coroutine library with clean API
cc_library(
    name = "co_cpp20",
    srcs = [
        "coroutine_cpp20.cc",
    ],
    hdrs = [
        "coroutine_cpp20.h",
    ],
    copts = [
        "-Wall",
        "-std=c++20",
    ],
    deps = [],
)

cc_binary(
    name = "cotest",
    srcs = ["cotest.cc"],
    deps = [
        ":co",
    ],
)

cc_binary(
    name = "costress",
    srcs = ["costress.cc"],
    deps = [
        ":co",
    ],
)

cc_test(
    name = "coroutines_test",
    srcs = [
        "coroutines_test.cc",
    ],
    deps = [
        ":co",
        "@abseil-cpp//absl/status:status_matchers",
        "@googletest//:gtest_main",
    ],
)

# C++20 coroutine tests
cc_test(
    name = "test_cpp20",
    srcs = [
        "test_cpp20.cc",
    ],
    copts = [
        "-std=c++20",
    ],
    deps = [
        ":co_cpp20",
        "@googletest//:gtest_main",
    ],
    tags = ["cpp20"],
)
